# Brain

./: Cargo.toml  README.md  test.raw  test1.raw
.cargo/: config.toml
rmp3/: .cargo_vcs_info.json  Cargo.toml  build.rs
src/: .main.rs.swp  audio.rs  buttons.rs  config.rs  leds.rs  main.rs  main.rs.1  main.rs.3  main.rs.bak
