[package]
name = "esp-test5"
version = "0.1.0"
authors = ["user"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native", "nightly" ]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std" ]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly" ]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver" ]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.1", default-features = false }
#rgb = "0.8"
anyhow = "1.0"
#embassy-futures = "0.1.0"
#embassy-executor = { version = "0.1.1", default-features = false, features = [ "nightly", "integrated-timers" ] }
#embassy-time = { version = "0.1.0", default-features = false, features = [ "nightly" ] }
xtensa-lx = { version = "0.8", optional = true, default-features = false }
static_cell = "1"
embedded-hal = "0.2"

[patch.crates-io]
# Ensure we use the git version of all of the embassy stuff. Specify it here instead of
# in [dependencies] because this ensures that we don't duplicate any dependencies like
# `embassy-time`. This avoids bugs like this one:
# https://github.com/embassy-rs/embassy/issues/1115
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a" }

[build-dependencies]
embuild = "0.31.3"
